# HaploCharmer

./: .gitignore  README.md  README.rst  pyproject.toml
HaploCharmer/: pyproject.toml
HaploCharmer/Haplocharmer/: __init__.py  global_variables.py  main.py
HaploCharmer/Haplocharmer/install_files/: cluster_config_SLURM.yaml  config.yaml
HaploCharmer/Haplocharmer/snakefiles/: snakefile
Haplocharmer/: __init__.py  global_variables.py  module.py
Haplocharmer/install_files/: tools_path.yaml
Haplocharmer/scripts/: BAM_to_gVCF.py  VCF_to_HapPresAbs.py
Haplocharmer/snakefiles/: Snakefile
Haplocharmer/snakemake_scripts/: BAM_to_gVCF.py  VCF_filter.py  VCF_to_HapPresAbs.py
