[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=6.2"
]


[tool.setuptools_scm]
write_to = "Haplocharmer/_version.py"
version_scheme="release-branch-semver"
tag_regex="^(\\d.\\d.\\d)-*\\w*\\d*$"
local_scheme = "no-local-version"

[project]
name = "Haplocharmer"
dynamic = ["version"]
description = "HaploCharmer is a Snakemake pipeline for small haplotypes calling from short read sequencing data"
authors = [
    {name = "Durand Théo (CIRAD)",email = "theo.durand@cirad.fr"},
]
dependencies = ["PyYAML", "click>=8.0.3", "cookiecutter", "docutils", "python-gitlab", "snakemake", "tqdm"]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["snakemake", "haplotypes", "workflow"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "License :: Free for non-commercial use",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/thdurand4/HaploCharmer"
"Bug Tracker" = "https://github.com/thdurand4/HaploCharmer/issues"
Documentation = "https://Haplocharmer.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/thdurand4/HaploCharmer"

[project.optional-dependencies]
dev = [
    "sphinx_click",
    "sphinx_copybutton",
    "sphinx_rtd_theme",
    "tox",
]

[project.scripts]
bam_to_gVCF = "Haplocharmer.scripts.BAM_to_gVCF:main"
vcf_filter = "Haplocharmer.scripts.VCF_filter:main"
HaploCharmer = "Haplocharmer.main:main"

[project.entry-points.Haplocharmer]
Haplocharmer = "__init__"

[tool.sphinx]
source-dir = "docs/source"
build-dir = "docs/build"
config-dir = "docs/source"
