[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=6.2"
]


[tool.setuptools_scm]
write_to = "Haplocharmer/_version.py"
version_scheme="release-branch-semver"
tag_regex="^(\\d.\\d.\\d)-*\\w*\\d*$"
local_scheme = "no-local-version"

[project]
name = "Haplocharmer"
dynamic = ["version"]
description = "TODO !!!!!"
authors = [
    {name = "Ravel Sebastien (CIRAD)",email = "sebastien.ravel@cirad.fr"},
]
dependencies = ["PyYAML", "click>=8.0.3", "cookiecutter", "docutils", "python-gitlab", "snakemake", "tqdm"]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["snakemake", "wrapper", "installation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "License :: Free for non-commercial use",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://forge.ird.fr/phim/sravel/snakecdysis"
Downloads = "https://forge.ird.fr/phim/sravel/snakecdysis/archive/"
"Bug Tracker" = "https://forge.ird.fr/phim/sravel/snakecdysis/issues"
Documentation = "https://snakecdysis.readthedocs.io/en/latest/"
"Source Code" = "https://forge.ird.fr/phim/sravel/snakecdysis"

[project.optional-dependencies]
dev = [
    "sphinx_click",
    "sphinx_copybutton",
    "sphinx_rtd_theme",
    "tox",
]

[project.scripts]
generate_template = "snakecdysis.scripts.generate_template:main"

[project.entry-points.Haplocharmer]
Haplocharmer = "__init__"

